---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2020-12-23
  Changes:
    - Tweaked PLD's based on Player Feedback
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2020-12-19
  Changes:
    - Added new experimental setting to relocate items into their normal vanilla locations
    - Updated all items in Equipment to respect the new setting above
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2020-12-17
  Changes:
    - Adjusted Personal Roboports and recharge rates
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2020-12-16
  Changes:
    - Adjusted Personal Cannon's
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2020-11-24
  Changes:
    - Updated for Factorio 1.1
    - Fixed Laser Ammo
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2020-11-09
  Changes:
    - Made the MK2 Personal Canon Device manual
    - Added a Remote Control for the Personal Canon Device
    - Corrected Mistake in Personal Cannon Device Energy Consumption
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2020-11-08
  Changes:
    - Adjusted Power Armor Ingredients to allow it to be crafted in an ASM.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2020-08-28
  Changes:
    - Updated for Factorio v1