@@ -14,7 +14,7 @@ for x,roboport in pairs(personal_roboport) do
                 type = "recipe",
                 name = roboport.name,
                 enabled = false,
-                energy_required = 5,
+                energy_required = roboport.craft_time,
                 ingredients = roboport.ingredients,
                 result = roboport.name
             },
