@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.8
-Date: ????
+Date: 2021-01-03
   Changes:
+    - Added Energy Required to all Teirs of Machines & Items
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.7
 Date: 2020-12-23
